Workaround crash due to QTBUG-144544

QQuickItemGrabResult has unsafe thread handling resulting in crashes
when we delete it before the result is ready. Workaround by keeping
the instances alive until they're ready.
SENTRY: PLASMA-WORKSPACE-21BB
BUG: 514098